--- a/app/views/students/_claimed_students.html.haml
+++ b/app/views/students/_claimed_students.html.haml
@@ -15,6 +15,8 @@
               Email
             %th
               Hometown
+            %th
+              Grad Year
             %th.text-center
               Details
             %th.text-center
@@ -38,6 +40,8 @@
                 = student.email
               %td
                 = student.hometown
+              %td
+                = student.grad_year
               %td.text-center
                 = link_to (fa_icon "desktop"), edit_student_path(student), class: "btn btn-success"
               %td.text-center
