--- a/app/views/students/_unclaimed_students.html.haml
+++ b/app/views/students/_unclaimed_students.html.haml
@@ -15,6 +15,8 @@
               Instuments
             %th
               Ensembles
+            %th
+              Grad Year
             %th.text-center
               Details
             %th.text-center
@@ -32,6 +34,8 @@
                 = student.instrument_list
               %td
                 = student.ensemble_list
+              %td
+                = student.grad_year
               %td.text-center
                 = link_to (fa_icon "desktop"), edit_student_path(student), class: "btn btn-success"
               %td.text-center
