Added recruitment head permissions

--- a/app/views/fields/permissions_error.html.haml
+++ b/app/views/fields/permissions_error.html.haml
@@ -14,4 +14,4 @@
         %div.alert.alert-danger
           %strong
             Warning!
-          Admin priviledges required to access this page.
+          Admin or Recruitment Head priviledges required to access this page.
