--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -57,6 +57,9 @@
           - if current_user.director
             %li
               Director
+          - if current_user.recruitment_head
+            %li
+              Recruitment Head
           - if current_user.recruiter
             %li
               Recruiter
