--- a/app/views/users/registrations/edit_permissions.html.haml
+++ b/app/views/users/registrations/edit_permissions.html.haml
@@ -19,6 +19,9 @@
               = f.label :director
               = f.check_box :director
             %div.form-group
+              = f.label :recruitment_head
+              = f.check_box :recruitment_head
+            %div.form-group
               = f.label :recruiter
               = f.check_box :recruiter
             %div.form-group
