--- a/app/views/users/registrations/generate_new.html.haml
+++ b/app/views/users/registrations/generate_new.html.haml
@@ -41,6 +41,9 @@
               = f.label :director
               = f.check_box :director
             %div.form-group
+              = f.label :recuitment_head
+              = f.check_box :recruitment_head
+            %div.form-group
               = f.label :recruiter
               = f.check_box :recruiter
             %div.form-group
