--- a/app/views/users/registrations/generate_new.html.haml
+++ b/app/views/users/registrations/generate_new.html.haml
@@ -41,7 +41,7 @@
               = f.label :director
               = f.check_box :director
             %div.form-group
-              = f.label :recuitment_head
+              = f.label :recruitment_head
               = f.check_box :recruitment_head
             %div.form-group
               = f.label :recruiter
