Started cleaning up unclaimed student queries

--- a/app/views/students/_unclaimed_students.html.haml
+++ b/app/views/students/_unclaimed_students.html.haml
@@ -28,7 +28,10 @@
             %td
               = student.full_name_reversed
             %td
-              = student.hometown
+              - student.addresses.each do |address|
+                - if (address.id == Field.where(name: "Address").first.id)
+                  = [address.city, address.state.abbreviation].join(", ")
+                  - break
             %td
               = student.instrument_list
             %td
