--- a/app/views/accountability/_claimed_students.html.haml
+++ b/app/views/accountability/_claimed_students.html.haml
@@ -1,7 +1,7 @@
 %div.row
   %div.col-sm-12
     %div.table-responsive
-      %table.table.table-hover.table-condensed#dataTable-simple
+      %table.table.table-hover.table-condensed
         %thead
           %tr
             %th
@@ -27,10 +27,8 @@
               Archive
             %th.text-center
               Contact
-            %th.text-center
-              Unclaim
         %tbody
-          - @claimed_students.each_with_index do |student, i|
+          - @students.each_with_index do |student, i|
             %tr{ class: "#{student.column_color}"}
               %th.row
                 = i + 1
@@ -55,6 +53,4 @@
                 = link_to (fa_icon "archive"), student_archive_path(student), method: :delete, data: { confirm: 'Are you sure you wish to archive this student?' }, class: "btn btn-danger"
               %td.text-center
                 = link_to (fa_icon "comments-o"), new_comment_path(student_id: student.id), class: "btn btn-primary"
-              %td.text-center
-                = link_to (fa_icon "remove"), student_unclaim_path(student), method: :put, class: "btn btn-warning"
 
