--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -8,7 +8,7 @@
               Contacted by
               = comment.user.full_name
               on
-              = comment.created_at.to_time.strftime('%a %b %d, at %l:%M %p')
+              = comment.created_at.strftime('%a %b %d, at %l:%M %p')
         %div.panel-body
           %div.row
             %div.col-sm-6
