--- a/app/views/scores/index.html.haml
+++ b/app/views/scores/index.html.haml
@@ -16,7 +16,7 @@
             %span
               = game.name
               on
-              = game.played_on.to_time.strftime('%b %d, %Y')
+              = game.played_on.strftime('%b %d, %Y')
             - if !score.nil?
               %span.pull-right
                 = link_to "Edit", edit_season_student_score_path(@season, @student, score), class: "btn btn-success btn-xs"
