--- a/app/views/students/_search_table_columns.html.haml
+++ b/app/views/students/_search_table_columns.html.haml
@@ -26,6 +26,11 @@
             %label
               = check_box_tag 'special_fields[]', 'Recruit', @special_fields.include?('Recruit')
               Recruit
+        %div.col-sm-2
+          %div.checkbox
+            %label
+              = check_box_tag 'special_fields[]', 'Claimed', @special_fields.include?('Claimed')
+              Claimed
         - @fields_top.each do |field|
           %div.col-sm-2
             %div.checkbox
