Added hometown as special search field, cleaned up search page visuals and added a complete breakdown link

--- a/app/views/students/_search_detailed_filter.html.haml
+++ b/app/views/students/_search_detailed_filter.html.haml
@@ -5,23 +5,23 @@
         Detailed Search Parameters
   %div.panel-collapse.collapse{"aria-labelledby" => "headingOne", :role => "tabpanel", id: "collapse_search_parameters"}
     %div.panel-body
-      %div.row.bottom-margin
-        %div.col-sm-12
+      %div.row
+        %div.col-sm-6.bottom-margin
           %div.input-group
             %span.input-group-addon
               Instrument Interests
             = text_field_tag 'search_instrument', @filters["instruments"].to_s, {class: "form-control"}
-      %div.row.bottom-margin
-        %div.col-sm-12
+        %div.col-sm-6.bottom-margin
           %div.input-group
             %span.input-group-addon
               Ensemble Interests
             = text_field_tag 'search_ensemble', @filters["ensembles"].to_s, {class: "form-control"}
 
-      - @fields_all.each do |field|
-        %div.row.bottom-margin
-          %div.col-sm-12
-            %div.input-group
-              %span.input-group-addon
-                = field.name
-              = text_field_tag "search[#{field.id}]", @filters[field.id].to_s, {class: "form-control"}
+      - @fields_all.each_slice(2) do |slice|
+        %div.row
+          - slice.each do |field|
+            %div.col-sm-6.bottom-margin
+              %div.input-group
+                %span.input-group-addon
+                  = field.name
+                = text_field_tag "search[#{field.id}]", @filters[field.id].to_s, {class: "form-control"}
