--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -10,8 +10,17 @@
       =link_to "Online Toolbox", root_path, class: "navbar-brand"
     %div.collapse.navbar-collapse#navbar
       %ul.nav.navbar-nav
-        %li
-          = link_to "Students", students_path
+        %li.dropdown
+          %a.dropdown-toggle{'href'=>"#", 'data-toggle'=>"dropdown", "id"=>"dropdownNavBar", 'role'=>"button", 'aria-expanded'=>"false", 'aria-labelledby'=>"dropdownNavBar"}
+            Students
+            %span.caret
+          %ul.dropdown-menu{'role'=>"menu"}
+            %li
+              = link_to "Recruitment", students_path
+            %li
+              = link_to "Complete Breakdown", search_students_terms_path("large_filter"=>["all"], "search_instrument"=>current_user.favorite_instruments.map(&:instrument).map(&:name).join(", "), "special_fields"=>["Instruments","Hometown", "Claimed", "Recruit"], "fields"=>[2, 3, 5, 8]), method: :post
+            %li
+              = link_to "Favorite Instruments", user_favorite_instruments_path
         %li
           = link_to "Seasons", seasons_path
         %li
