--- a/app/views/students/_search_table_columns.html.haml
+++ b/app/views/students/_search_table_columns.html.haml
@@ -31,6 +31,11 @@
             %label
               = check_box_tag 'special_fields[]', 'Claimed', @special_fields.include?('Claimed')
               Claimed
+        %div.col-sm-2
+          %div.checkbox
+            %label
+              = check_box_tag 'special_fields[]', 'Hometown', @special_fields.include?('Hometown')
+              Hometown
         - @fields_top.each do |field|
           %div.col-sm-2
             %div.checkbox
