--- a/app/views/shared/_settings_panel.html.haml
+++ b/app/views/shared/_settings_panel.html.haml
@@ -19,4 +19,6 @@
     = link_to "Ensembles", ensembles_path
   %li{role:"presentation", class: (controller.class == RecruitStatusesController ? 'active' : '')}
     = link_to "Recruit Statuses", recruit_statuses_path
-
+  %hr
+  %li{role:"presentation", class: (controller.class == RibbonsController ? 'active' : '')}
+    = link_to "Ribbons", ribbons_path
